# pricingAPI

./: .gitignore  .pre-commit-config.yaml  README.md  erd.txt  requirements.txt  scraper.py  splitter.py
aldi/: aldi_scraper.py
backend/: Makefile  pyproject.toml
backend/app/: main.py
backend/app/db/: config.py
backend/app/routes/import_export/: download.py  upload.py
backend/app/routes/services/: stores.py
backend/app/schemas/: schema.py
backend/app/server/: connection.py
backend/app/services/: file_management.py  splitter.py
backend/app/services/aldi/: aldi_locations.py  aldi_scraper.py
bjs/: bjs_scraper.py
data_files/products/: bjs_products.csv
data_files/stores/: store_data.csv
frontend/: package.json
frontend/src/app/: page.tsx
frontend/src/app/download/: page.tsx
frontend/src/app/stores/aldi/: page.tsx
frontend/src/app/stores/bjs/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: store-list.tsx  store-selection.tsx
frontend/src/components/uploads/: dropdown.tsx  file_upload.tsx
misc/: er-digram.vsdx
misc/data_files/products/: aldi_products.csv
misc/data_files/stores/: store_numbers.json
pricing_api/: .gitignore  package.json  pyproject.toml
pricing_api/src/app/: page.tsx
pricing_api/src/app/stores/aldi/: page.tsx
pricing_api/src/scripts/: file_management.py  schema.py  splitter.py
pricing_api/src/scripts/aldi/: aldi_locations.py  aldi_scraper.py
pricing_api/src/scripts/bjs/: bjs_scraper.py
